--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.2",
     "react": "16.9.0",
     "react-native": "0.61.0",
+    "react-native-camera": "^3.43.6",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^3.3.2",
     "react-native-vector-icons": "^8.1.0"
