--- a/MobileApp/ios/MobileApp/Info.plist
+++ b/MobileApp/ios/MobileApp/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>MobileApp</string>
+	<string>Dog Breed Identifier</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
