--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -10,14 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "react": "16.9.0",
     "react-native": "0.61.0",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^3.43.6",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.2",
     "react-native-vector-icons": "^8.1.0"
   },
