--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -15,15 +15,19 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "filestream": "^5.0.0",
+    "image-to-base64": "^2.2.0",
     "multer": "^1.4.2",
     "react": "16.9.0",
+    "react-file-reader": "^1.1.4",
     "react-native": "0.61.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^3.43.6",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native-document-picker": "^5.0.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.2",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
